[gd_scene load_steps=27 format=2]

[ext_resource path="res://spells/water/water3.gd" type="Script" id=1]
[ext_resource path="res://spells/water/sprites/tidalWaveUp1.png" type="Texture" id=2]
[ext_resource path="res://spells/water/sprites/tidalWaveUp2.png" type="Texture" id=3]
[ext_resource path="res://spells/water/sprites/tidalWaveUp3.png" type="Texture" id=4]
[ext_resource path="res://spells/water/sprites/tidalWaveUp4.png" type="Texture" id=5]
[ext_resource path="res://spells/water/sprites/tidalWaveUp5.png" type="Texture" id=6]
[ext_resource path="res://spells/water/sprites/tidalWaveUp6.png" type="Texture" id=7]
[ext_resource path="res://spells/water/sprites/tidalWaveUp7.png" type="Texture" id=8]
[ext_resource path="res://spells/water/sprites/tidalWave1.png" type="Texture" id=9]
[ext_resource path="res://spells/water/sprites/tidalWave2.png" type="Texture" id=10]
[ext_resource path="res://spells/water/sprites/tidalWave3.png" type="Texture" id=11]
[ext_resource path="res://spells/water/sprites/tidalWave4.png" type="Texture" id=12]
[ext_resource path="res://spells/water/sprites/tidalWave5.png" type="Texture" id=13]
[ext_resource path="res://spells/water/sprites/tidalWave6.png" type="Texture" id=14]
[ext_resource path="res://spells/water/sprites/tidalWave7.png" type="Texture" id=15]
[ext_resource path="res://spells/water/sprites/tidalWaveDown1.png" type="Texture" id=16]
[ext_resource path="res://spells/water/sprites/tidalWaveDown2.png" type="Texture" id=17]
[ext_resource path="res://spells/water/sprites/tidalWaveDown3.png" type="Texture" id=18]
[ext_resource path="res://spells/water/sprites/tidalWaveDown4.png" type="Texture" id=19]
[ext_resource path="res://spells/water/sprites/tidalWaveDown5.png" type="Texture" id=20]
[ext_resource path="res://spells/water/sprites/tidalWaveDown6.png" type="Texture" id=21]
[ext_resource path="res://spells/water/sprites/tidalWaveDown7.png" type="Texture" id=22]
[ext_resource path="res://spells/base_projectile.gd" type="Script" id=23]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "up",
"speed": 7.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "side",
"speed": 7.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "down",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 48, 22 )

[sub_resource type="Animation" id=3]

resource_name = "death"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "free_scn"
} ]
}

[node name="water3" type="Node2D"]

script = ExtResource( 1 )
has_activation = false

[node name="sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "side"
frame = 2
playing = true
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="projectile" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 23 )
element = 1
level = 3

[node name="shape" type="CollisionShape2D" parent="projectile" index="0"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="lifetime" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[node name="anim" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/death = SubResource( 3 )
blend_times = [  ]

[connection signal="area_entered" from="projectile" to="projectile" method="_on_projectile_area_entered"]

[connection signal="body_entered" from="projectile" to="." method="_on_projectile_body_entered"]

[connection signal="body_exited" from="projectile" to="." method="_on_projectile_body_exited"]

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]


